[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/VerticalSketchList/VerticalSketchList.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/SketchPane/SketchPane.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/ProfilePane/ProfilePane.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Hud/Hud.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SketchStatusControl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -304, 0 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("SketchStatusControl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -304, 0 ), Vector2( 48, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("SketchStatusControl:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 0 ), Vector2( -304, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("ProfilePane:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -302, 0 ), Vector2( 0, 0 ) ]
}

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SketchStatusControl" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = 48.0
margin_right = 352.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SketchStatusControl" parent="SketchStatusControl" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 297.0
margin_bottom = 593.0

[node name="VerticalSketchList" parent="." instance=ExtResource( 1 )]

[node name="ProfilePane" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = -302.0
margin_right = 2.00015

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/idle = SubResource( 1 )
anims/slide_active_sketch = SubResource( 2 )
anims/slide_active_sketch_backwards = SubResource( 3 )
anims/slide_profile_pane = SubResource( 4 )
